Fixed terminal format